--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -13,7 +13,7 @@ on:
       BASE_PROJECT:
         description: 'Choose a base project:'
         required: true
-        default: 'LineageOS 20.0'
+        default: 'LineageOS 21.0'
         type: choice
         options:
           - 'LineageOS 20.0'
@@ -27,39 +27,22 @@ on:
       BUILD_DIFFERENT_ROM:
         description: "Command to initialize a different 'repo' project:"
         required: false
-        default: "echo 'Build Starting!'"
+        default: "repo init -u https://github.com/RisingTechOSS/android -b fourteen --git-lfs"
       REMOVALS:
         description: "Folders to be removed before syncing:"
         required: false
       LOCAL_MANIFEST:
         description: "Personal local manifest [repository or raw]:"
         required: true
-        default: 'https://github.com/sounddrill31/local_manifests'
+        default: 'https://github.com/OkBuddyGSI/treble_manifest'
       LOCAL_MANIFEST_BRANCH:
         description: "Personal local manifest's branch:"
         required: false
-        default: 'lineage-oxygen'
-      DEVICE_NAME:
-        description: "Device's codename:"
-        required: true
-        default: "oxygen"
-      PRODUCT_NAME:
-        description: "Product to build:"
-        required: true
-        default: "lineage_oxygen"
+        default: '14'
       BUILD_COMMAND:
         description: 'Command to be used for compiling:'
         required: true
-        default: 'mka bacon'
-      BUILD_TYPE:
-        description: 'Type of build:'
-        required: true
-        default: 'userdebug'
-        type: choice
-        options: 
-        - 'eng'
-        - 'userdebug'
-        - 'user' 
+        default: 'make systemimage -j\$(nproc --all)'
       CLEAN_BUILD:
         description: 'Build with a clean workspace?'
         required: true
@@ -297,14 +280,6 @@ jobs:
       # Check-out in order to access the repository's files.
     - name: Check-out to repository
       uses: actions/checkout@v4
-
-      # Set-up a spearate directory for the device.
-    - name: Set-up workspace environment
-      run: |
-        cd $PROJECTFOLDER
-        mkdir ${{ github.event.inputs.DEVICE_NAME }}
-        cd ${{ github.event.inputs.DEVICE_NAME }}
-      continue-on-error: true
       
       # Generate 'git' credential in base of the workflow's author.
     - name: Set-up 'git' credential(s)
@@ -373,11 +348,6 @@ jobs:
         # Clone local_manifests repository
         $BUILD_DIFFERENT_ROM ; \
         git clone ${{ github.event.inputs.LOCAL_MANIFEST }} --depth 1 -b ${{ github.event.inputs.LOCAL_MANIFEST_BRANCH }} .repo/local_manifests && \
-
-        if [ ! $? == 0 ]; then \
-          curl -o .repo/local_manifests ${{ github.event.inputs.LOCAL_MANIFEST }}; \
-          echo "Git clone failed, downloading through curl instead..."; \
-        fi \
         
         # Sync the repositories
         /opt/crave/resync.sh  && \
@@ -385,15 +355,38 @@ jobs:
         # Set up build environment
         export BUILD_USERNAME=${{ github.actor }} ; \
         export BUILD_HOSTNAME=crave ; \
+
+        # Apply Patches
+        bash RisingOS_gsi/patches/apply-patches.sh . && \
+
+        # Generate device configuration
+        cd device/phh/treble; \
+        bash generate.sh RisingOS && \
+        cd ../../..; \
         source build/envsetup.sh && \
 
         echo "Repository: ${{ github.repository }}"; \
         echo "Run ID: ${{ github.run_id }}"; \
 
+        # Prepare folders
+        mkdir -p tempout && \
+
         # Build the ROM
-        lunch ${{ github.event.inputs.PRODUCT_NAME }}-${{ github.event.inputs.BUILD_TYPE }} && \
         make installclean && \
-        ${{ github.event.inputs.BUILD_COMMAND }}"
+        lunch treble_arm64_bvN-userdebug; \
+        ${{ github.event.inputs.BUILD_COMMAND }}; \
+        mv out/target/product/*/system.img tempout/RisingOS-Generic-$(date +%Y%m%d)-OkBuddyGSI-EXPERIMENTATIONS.img; \
+        lunch treble_arm64_bgN-userdebug; \
+        ${{ github.event.inputs.BUILD_COMMAND }}; \
+        mv out/target/product/*/system.img tempout/RisingOS-Generic-$(date +%Y%m%d)-OkBuddyGSI-EXPERIMENTATIONS.img; \
+        make installclean; \
+        mv tempout out/target/product/finaloutput;
+        # This build was run from OkBuddyGSI 
+        # Triggered by ${{ github.actor }} representing OkBuddyGSI
+        
+        # Respect the Queue
+        # Respect the rules
+        # Please Contact t.me/OkBuddyGSI if this build breaks any rules"
       timeout-minutes: 720
 
       # Send Build 'status' notification
@@ -421,7 +414,8 @@ jobs:
         cd $PROJECTFOLDER
         echo "${{ secrets.GITHUB_TOKEN }}" > token.txt
         crave push token.txt -d $(crave ssh -- pwd | grep -v Select | sed -s 's/\r//g')/
-        crave ssh -- "export GH_UPLOAD_LIMIT="${{ secrets.GH_UPLOAD_LIMIT }}"; bash /opt/crave/github-actions/upload.sh '${{ github.run_id }}' '${{ github.event.inputs.DEVICE_NAME }}'  '${{ github.repository }}' '${{ github.event.inputs.PRODUCT_NAME }}-${{ github.run_id }}' '${{ secrets.EXTRA_FILES }}'"
+        NOW=$(date '+%Y%m%d')
+        crave ssh -- "export GH_UPLOAD_LIMIT="${{ secrets.GH_UPLOAD_LIMIT }}"; bash /opt/crave/github-actions/upload.sh '${{ github.run_id }}' 'RisingOS GSI $NOW'  '${{ github.repository }}' '${{ github.event.inputs.PRODUCT_NAME }}-${{ github.run_id }}' '${{ secrets.EXTRA_FILES }}'"
 
       # Pull Errors and Display them
     - name: Display error.log
@@ -438,7 +432,8 @@ jobs:
     - name: Upload Using telegram-upload
       run: |
         cd $PROJECTFOLDER
-        crave ssh -- "export TG_UPLOAD_LIMIT="${{ secrets.TG_UPLOAD_LIMIT }}"; bash /opt/crave/telegram/upload.sh '${{ github.event.inputs.DEVICE_NAME }}' '${{ secrets.EXTRA_FILES }}'"
+        NOW=$(date '+%Y%m%d')
+        crave ssh -- "export TG_UPLOAD_LIMIT="${{ secrets.TG_UPLOAD_LIMIT }}"; bash /opt/crave/telegram/upload.sh 'RisingOS GSI $NOW' '${{ secrets.EXTRA_FILES }}'"
       continue-on-error: true
 
       # Remove 'crave' clone
