--- a/.github/workflows/force-restart-runner.yml
+++ b/.github/workflows/force-restart-runner.yml
@@ -43,7 +43,7 @@ jobs:
       # Start 'runner' in 'tmux'.
     - name: Run crave devspace
       run: |
-          crave devspace -- "tmux kill-session -t ghactions || true
-          tmux new-session -d -s ghactions 
-          tmux send-keys -t ghactions './actions-runner/run.sh' Enter 
+          crave devspace -- "tmux kill-session -t ghactionsokbuddy || true
+          tmux new-session -d -s ghactionsokbuddy 
+          tmux send-keys -t ghactionsokbuddy './actions-runner-okbuddy/run.sh' Enter 
           echo "Runner Started""
