--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -84,12 +84,12 @@ jobs:
 
     - name: Run crave devspace
       run: |
-        crave devspace -- "if tmux has-session -t ghactions; then 
+        crave devspace -- "if tmux has-session -t ghactionsokbuddy; then 
           echo "Runner is already Running" 
         else 
-          tmux kill-session -t ghactions;
-          tmux new-session -d -s ghactions 
-          tmux send-keys -t ghactions './actions-runner/run.sh' Enter 
+          tmux kill-session -t ghactionsokbuddy;
+          tmux new-session -d -s ghactionsokbuddy 
+          tmux send-keys -t ghactionsokbuddy './actions-runner-okbuddy/run.sh' Enter 
           echo "Runner Started"
         fi "
   prepare:
